Pointiness bug with multiple Subsurf modifier #43685

Closed
opened 2015-02-16 08:11:44 +01:00 by Danyang Yi · 6 comments

System Information
win7 sp1 64bit
Intel i5 cpu
Cycles Render

Blender Version
Broken: 2015-02-16 Hash:81be1c7

Short description of error
Thanks for you great work!
But There's A bad render result with Pointiness node.
Pointiness bug with multiple Subsurf modifier.
Pointiness_bug_with_multiple_Subsurf_modifier.jpg

Exact steps for others to reproduce the error
Check the modifier menu PLS.
blender file:
Pointiness_bug_with_multiple_Subsurf_modifier.blend

**System Information** win7 sp1 64bit Intel i5 cpu Cycles Render **Blender Version** Broken: 2015-02-16 Hash:81be1c7 **Short description of error** Thanks for you great work! But There's A bad render result with Pointiness node. Pointiness bug with multiple Subsurf modifier. ![Pointiness_bug_with_multiple_Subsurf_modifier.jpg](https://archive.blender.org/developer/F143663/Pointiness_bug_with_multiple_Subsurf_modifier.jpg) **Exact steps for others to reproduce the error** Check the modifier menu PLS. blender file: [Pointiness_bug_with_multiple_Subsurf_modifier.blend](https://archive.blender.org/developer/F143665/Pointiness_bug_with_multiple_Subsurf_modifier.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Sergey Sharybin was assigned by Danyang Yi 2015-02-16 08:11:44 +01:00
Author

Added subscriber: @yang2018

Added subscriber: @yang2018

This issue was referenced by cdc1dab073

This issue was referenced by cdc1dab073a3fd344ff3ca4a2abdcdecbf5e965e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit cdc1dab073.

Closed by commit cdc1dab073.

This issue was referenced by blender/cycles@9d9d4924e5

This issue was referenced by blender/cycles@9d9d4924e59deeda08fcdb75ef19e979c305a083
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43685
No description provided.