Fix T43685: New pointiness attribute error with auto-smooth enabled

Simple fix: all vertex attributes should be filled in before split.